# DX11ComputeShaderForImageFilters

./: .gitignore  .gitmodules  CMakeLists.txt  ComputeFilter.sln  ComputeFilter.vcxproj  ComputeFilter.vcxproj.filters  ComputeShader Filters.vcxproj  ComputeShader Filters.vcxproj.filters  README  README.md
data/: Circles.hlsl  Desaturate.hlsl  canvas.hlsl  effect1.hlsl  filters.hlsl  fractal.hlsl  fullQuad.fx  pbr.hlsl  rawDepth.hlsl  rawInstance.hlsl  rawView.hlsl  sphere.hlsl  terrain.hlsl
effect/: effect1.hlsl  lens_circle.hlsl
effects/: Circles.hlsl  bilateral.hlsl  denoise.hlsl  edge.hlsl  effect1.hlsl  fishEye.hlsl  swirl.hlsl  test.hlsl
examples/: Canvas.cpp  Fractal.cpp  ModelViewer.cpp  SimpleInstanceDraw.cpp  Sphere.cpp  TranslateAnimation.cpp
framework/: App.cpp  App.h  DXassert.cpp  DXassert.h  Exceptions.h  GHICommandContext.cpp  GHICommandContext.h  GHIResources.cpp  GHIResources.h  GHIUniformBuffer.cpp  GHIUniformBuffer.h  InterfacePointers.h  PCH.cpp  PCH.h  ShaderCache.cpp  ShaderCache.h  SwapChain.cpp  SwapChain.h  Timer.cpp  Timer.h  Utility.cpp  Utility.h  Window.cpp  Window.h
framework/GHI/: GHICommandContext.h  GHIResources.cpp  GHIResources.h  GHIShaderProgram.cpp  GHIShaderProgram.h  GHIUniformBuffer.h
framework/app/: App.cpp  Camera.cpp  Camera.h  FileIO.cpp  FileIO.h  Model.cpp  Model.h  SDKMesh.cpp  SDKMesh.h  Serialization.h  SwapChain.h  myCamera.cpp  mymath.cpp  mymath.h
framework/camera/: myCamera.h
framework/core/: App.cpp  App.h  ShaderCache.cpp  SwapChain.cpp  SwapChain.h  Window.h  mymath.h
framework/d3d/: DX11.h  FDX11GHICommandContext.cpp  FDX11GHICommandContext.h  FDX11GHIResources.cpp  FDX11GHIResources.h  FDX11GHIShaderProgram.cpp  FDX11GHIShaderProgram.h  LoaderHelpers.h
framework/dx11/: DX11.cpp  DX11.h  FDX11GHICommandContext.cpp  FDX11GHICommandContext.h  FDX11GHIResources.cpp  FDX11GHIResources.h
framework/io/: Model.cpp  Model.h
framework/utils/: Exceptions.h  Timer.cpp  Timer.h  Utility.cpp  Utility.h  myassert.cpp
source/: DX11EffectViewer.cpp  DX11EffectViewer.h  DXApplication.cpp  DXApplication.h  EffectManager.cpp  EffectManager.h  Filter.cpp  Filter.h  Logger.cpp  Utils.h  main.cpp
src/: EffectViewer.cpp  EffectViewer.h  Filter.h  Utils.h
